[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aiida-scheduler-nsccsz"
version = "0.1.0"
description = "AiiDA scheduler plugin for NSCCSZ HPC cluster (Platform LSF 8.0)"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AiiDA",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "aiida-core>=2.0,<3",
]

[project.urls]
Homepage = "https://github.com/guscccc/aiida-scheduler-nsccsz"

[project.entry-points."aiida.schedulers"]
"nsccsz.lsf" = "aiida_scheduler_nsccsz.lsf:NsccsLsfScheduler"

[tool.flit.module]
name = "aiida_scheduler_nsccsz"
